# 3sxw

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  ajusteFino.md  ajusteFino2.md  build-deps.sh  build.bat  compileHelp.md  debug-mode-plan.txt  debug-mode.md  erros.txt  guia.txt  guide.txt  replayPlan.txt  replayProblem.txt  resumo.txt  savePlan.txt
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  release.yml
appConfig/: CMakeLists.txt
appConfig/src/: config_file.c  config_file.h  font.c  font.h  localization.c  localization.h  main.c  ui.c  ui.h
cmake/: Info.plist
debugTexture/: README.md  analise-texturas.md  checklist-testes.md  micro-etapas-fase-4.md
docs/: THIRD_PARTY_NOTICES.txt  buildLinux.md  buildMac.md  buildWindows.md  building.md  config.md
include/port/: resources.h  single_instance.h
include/port/debug/: debug_log.h
include/port/sdl/: sdl_app.h  sdl_bezel.h  sdl_game_renderer.h  sdl_message_renderer.h  sdl_pad.h  sdl_scanlines.h  sdl_screenshot.h
include/port/sound/: spu.h
src/: args.c  configuration.h  main.c  sf3.rc
src/port/: paths.c  paths.h  resources.c  single_instance.c  utils.c  utils.h
src/port/config/: config.c  config.h  keymap.c
src/port/debug/: debug_log.c
src/port/io/: afs.c  afs.h
src/port/sdk/: sdk_libmc.c
src/port/sdl/: sdl_app.c  sdl_bezel.c  sdl_game_renderer.c  sdl_message_renderer.c  sdl_pad.c  sdl_scanlines.c  sdl_screenshot.c
src/port/sound/: adx.c  adx.h  spu.c
src/sf33rd/AcrSDK/MiddleWare/PS2/CapSndEng/: cse.c
src/sf33rd/AcrSDK/ps2/: ps2PAD.c
src/sf33rd/Source/Game/effect/: eff61.c
src/sf33rd/Source/Game/menu/: menu.c  menu.h
src/sf33rd/Source/Game/rendering/: dc_ghost.c
src/sf33rd/Source/Game/screen/: sel_pl.c
src/sf33rd/Source/Game/sound/: sound3rd.c
src/sf33rd/Source/Game/system/: pause.c  pause.h  sys_sub.c  sys_sub.h
src/sf33rd/Source/Game/ui/: count.c
src/sf33rd/Source/PS2/mc/: mcsub.c  savesub.c
